tabs at top and actionsidebar implemented

--- a/components/jade/includes/head.jade
+++ b/components/jade/includes/head.jade
@@ -2,7 +2,7 @@ head
     title Kanso - Simple Notetaker
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    meta(name="description", content="Kanso is a minimalistic, no-nonsense note taker that you can use without the need of your mouse")
+    meta(name="description", content="Kanso is a minimalistic, no-nonsense note taker")
     
     meta(property="og:title" content="")
     meta(property="og:url" content="")
