--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -32,8 +32,8 @@ $notes-tag-name-selected:    #95999d;
 //unselected, top of notesview
 $notes-title:       #dee5ed;
 $notes-excerpt:     #8f959b;
-$notes-tag-border:  #6d7279;
-$notes-tag-name:    #a6abaf;
+$notes-tag-border:  #cfcfcf;
+$notes-tag-name:    #878481;
 $notes-spacer:      #4a5059;
 
 //notesinfo
@@ -50,12 +50,13 @@ $default-bg-preview-header: #f2f2f2;
 $default-bg-preview-body: $white;
 $default-preview-text-color: #212121;
 
-$nav-height:        70px;
-$nav-width:         70px;
-$new-note-height:   95px;
-$input-title-height: 58px;
-$notespanel-width:  $nav-width * 4;
-$notesinfo-width:  280px;
+$nav-height:            65px;
+$nav-width:             75px;
+$tools-height:          30px;
+$input-title-height:    58px;
+$notespanel-width:      $nav-width * 4;
+$notesinfo-width:       280px;
+$actions-sidebar-width: 74px;
 
 $screen-small:  0;
 $screen-medium: 768px;
