--- a/components/sass/_mixins.scss
+++ b/components/sass/_mixins.scss
@@ -30,3 +30,9 @@
 @mixin overfix {
     overflow: auto;
 }
+
+@mixin borderbox {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
