--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -5,4 +5,5 @@
 @import "mixins";
 @import "extends";
 @import "components";
-@import "glyphicons";
+// @import "glyphicons";
+@import "font-awesome/font-awesome";
