cleaned up sass

--- a/components/jade/index.jade
+++ b/components/jade/index.jade
@@ -1,9 +1,8 @@
-//-notes-date
+//-tabs-top
 //-codepen stuff
 //-<span class="fa fa-codepen fa-2x"></span>
 //-<span class="glyphicons glyphicons-glass"></span>
 
-//-variables
 - icon = "http://placehold.it/30x30"
 
 doctype html
