--- a/components/jade/index.jade
+++ b/components/jade/index.jade
@@ -19,16 +19,16 @@ html
                             span.tooltiptext Notes
                     li
                         a(href="#")
+                            span.fa.fa-search
+                            span.tooltiptext Search
+                    li
+                        a(href="#")
                             span.fa.fa-tags
                             span.tooltiptext Tags
                     li
                         a(href="#")
                             span.fa.fa-cog
                             span.tooltiptext Preferences
-                    li
-                        a(href="#")
-                            span.fa.fa-trash-o
-                            span.tooltiptext Trash
             #notes.currentpanel
                 .tools
                     .newnote New Note
