--- a/components/jade/index.jade
+++ b/components/jade/index.jade
@@ -48,35 +48,66 @@ html
                         span.date Jul 4, 2015
                         span.action.fa.fa-trash-o
                         span.action.fa.fa-envelope-o
-                    .note.selected
+                    .note
                         h3 Note Title something else goes ehre
-                        p something here lkasjdf;kas lkj;adadsf.
+                        p something here.sjda fklajslk lsjdl   slkd
                         span.date Jul 4, 2015
                         span.action.fa.fa-trash-o
                         span.action.fa.fa-envelope-o
-                .tools
-                    input(type="text")
+                    .note.selected
+                        h3 Note Title something else goes ehre
+                        p something here. lsdkj f;lksd jf;askl dfj;alks dfj;alks
+                        span.date Jul 4, 2015
+                        span.action.fa.fa-trash-o
+                        span.action.fa.fa-envelope-o
+                    .note
+                        h3 Note Title something else goes ehre
+                        p something here.
+                        span.date Jul 4, 2015
+                        span.action.fa.fa-trash-o
+                        span.action.fa.fa-envelope-o
+                    .note
+                        h3 Note Title something else goes ehre
+                        p something here.
+                        span.date Jul 4, 2015
+                        span.action.fa.fa-trash-o
+                        span.action.fa.fa-envelope-o
+                    .note
+                        h3 Note Title something else goes ehre
+                        p something here.
+                        span.date Jul 4, 2015
+                        span.action.fa.fa-trash-o
+                        span.action.fa.fa-envelope-o
+                    .note
+                        h3 Note Title something else goes ehre
+                        p something here.
+                        span.date Jul 4, 2015
+                        span.action.fa.fa-trash-o
+                        span.action.fa.fa-envelope-o
+                    .note
+                        h3 Note Title something else goes ehre
+                        p something here.
+                        span.date Jul 4, 2015
+                        span.action.fa.fa-trash-o
+                        span.action.fa.fa-envelope-o
+                    .note
+                        h3 Note Title something else goes ehre
+                        p something here.
+                        span.date Jul 4, 2015
+                        span.action.fa.fa-trash-o
+                        span.action.fa.fa-envelope-o
+                // .tools
+                //     input(type="text")
             // #tags
             // #settings        
         section#edit
             #tags.header
+                .menu-toggle: span.fa.fa-bars
                 ul
-                    li.menu-toggle: span.fa.fa-bars
-                    li.tag: span Add tag
                     li.tag: span Ideas
                     li.tag: span Work
-                    li.tag: span Work1
-                    li.tag: span Work2
-                    li.tag: span Work3
-                    li.tag: span Work4
-                    li.tag: span Work5
-                    // li.tag: span Work6
-                    // li.tag: span Work7
-                    // li.tag: span Work8
-                    // li.tag: span Work9
-                    // li.tag: span Work10
-                    // li.tag: span Work11
-                    // li.tag: span Work1112
+                    li.tag: span programming
+                    li.tag: span +
             .body
                 input(placeholder="Add a title...")
                 div.content(contenteditable="true" data-text="Enter text here")
