--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -63,4 +63,4 @@ $screen-medium: 768px;
 $screen-large: 1300px;
 
 $font-main: "Source Sans Pro", Arial, sans-serif;
-$font-editor: "Roboto Mono", Courier, monospace;
+$font-editor: "Roboto Mono", monospace;
