--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -404,7 +404,7 @@ th {
   padding: 0;
 }
 
-#panel .note h3, #panel .note p {
+#panel .note h3, #panel .note p, #edit #tags ul {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -440,16 +440,16 @@ ul {
 .tag {
   margin: 0.3em 0.3em 0.2em 0;
   border-radius: 13px;
-  height: 26px;
+  height: 23px;
   border: 2px solid #cfcfcf;
   color: #878481;
   background-color: transparent;
-  min-width: 50px;
+  min-width: 42px;
   width: auto;
   text-align: center;
   display: inline-block;
-  line-height: 0.9em;
-  font-size: 0.9rem;
+  line-height: 0.85em;
+  font-size: 0.85rem;
 }
 
 .tag .selected {
@@ -524,8 +524,8 @@ ul {
 }
 
 #panel .body {
-  overflow-y: auto;
-  height: calc(100vh - 65px - (2 * 30px) - 50px);
+  overflow-y: scroll;
+  height: calc(100vh - 65px - 30px - 26px);
 }
 
 #panel .currentpanel {
@@ -611,7 +611,7 @@ ul {
 
 #panel .note {
   cursor: pointer;
-  min-height: 80px;
+  height: 74px;
   padding: 10px 14px;
   margin: 0;
   color: #8f959b;
@@ -631,13 +631,13 @@ ul {
 }
 
 #panel .note .date {
-  margin: 5px 0 0;
+  margin: 2px 0 0;
   float: left;
   font-size: 0.9rem;
 }
 
 #panel .note .action {
-  margin: 4px 2px 0 15px;
+  margin: 0 2px 0 15px;
   float: right;
   font-size: 1.3em;
   visibility: hidden;
@@ -656,7 +656,7 @@ ul {
 }
 
 #panel .note:hover {
-  background-color: #1a1a1a;
+  background-color: #212121;
 }
 
 #panel .note:hover .action {
@@ -674,14 +674,28 @@ ul {
   background-color: #f2f2f2;
 }
 
+#edit #tags .menu-toggle {
+  width: 60px;
+  height: 65px;
+  float: left;
+}
+
+#edit #tags .menu-toggle span {
+  cursor: pointer;
+  font-size: 24px;
+  color: #767676;
+  line-height: 65px;
+  margin: auto 20px;
+}
+
 #edit #tags ul {
-  margin-top: 15px;
-  margin-left: 15px;
-  display: inline-block;
-  height: 50px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-top: 15px;
+  float: left;
+  height: 65px;
+  max-width: calc(100% - 300px - 74px - 65px);
 }
 
 #edit #tags ul li {
@@ -689,20 +703,8 @@ ul {
   display: inline-block;
 }
 
-#edit #tags ul .menu-toggle {
-  width: 24px;
-  height: 24px;
-  margin-right: 15px;
-}
-
-#edit #tags ul .menu-toggle span {
-  cursor: pointer;
-  font-size: 24px;
-  color: #767676;
-}
-
 #edit .body {
-  font-family: "Roboto Mono", Courier, monospace;
+  font-family: "Roboto Mono", monospace;
   overflow-y: auto;
   float: left;
   width: calc(100% - 300px - 74px);
