--- a/components/sass/_components.scss
+++ b/components/sass/_components.scss
@@ -43,16 +43,16 @@ ul {
 .tag {
     margin: 0.3em 0.3em 0.2em 0;
     border-radius: 13px;
-    height: 26px;
+    height: 23px;
     border: 2px solid $notes-tag-border;
     color: $notes-tag-name;
     background-color: transparent;
-    min-width: 50px;
+    min-width: 42px;
     width: auto;
     text-align: center;
     display: inline-block;
-    line-height: 0.9em;
-    font-size: 0.9rem;
+    line-height: 0.85em;
+    font-size: 0.85rem;
     
     .selected {
         border: 2px solid $notes-tag-border-selected; 
@@ -119,8 +119,8 @@ ul {
     }
     
     .body {
-        overflow-y: auto;
-        height: calc(100vh - #{$nav-height} - (2 * #{$tools-height}) - 50px);
+        overflow-y: scroll;
+        height: calc(100vh - #{$nav-height} - #{$tools-height} - 26px);
     }
     .currentpanel {
         display: block !important;
@@ -188,7 +188,7 @@ ul {
     
     .note {
         cursor: pointer;
-        min-height: 80px;
+        height: 74px;
         @extend %spacer;
         padding: 10px 14px;
         margin: 0;
@@ -207,12 +207,12 @@ ul {
             @extend %ellipsis;
         }
         .date {
-            margin: 5px 0 0;
+            margin: 2px 0 0;
             float: left;
             font-size: 0.9rem;
         }
         .action {
-            margin: 4px 2px 0 15px;
+            margin: 0 2px 0 15px;
             float: right;
             font-size: 1.3em;
             visibility: hidden;
@@ -227,7 +227,7 @@ ul {
             }
         }
         &:hover {
-            background-color: darken($bg-color-1, 10%);
+            background-color: darken($bg-color-1, 7%);
             .action {
                 visibility: visible;
             }
@@ -242,27 +242,28 @@ ul {
     color: $default-preview-text-color;
     #tags {
         background-color: $default-bg-preview-header;
+        .menu-toggle {
+            width: 60px;
+            height: $nav-height;
+            float: left;
+            span {
+                cursor: pointer;
+                font-size: 24px;
+                color: #767676;
+                line-height: $nav-height;
+                margin: auto 20px;
+            }
+        }
         ul {
-            margin-top: 15px;
-            margin-left: 15px;
-            display: inline-block;
-            height: 50px;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            @include borderbox;
+            padding-top: 15px;
+            float: left;
+            height: $nav-height;
+            max-width: calc(100% - #{$notespanel-width} - #{$actions-sidebar-width} - 65px);
+            @extend %ellipsis;
             li {
                 margin-right: 10px;
                 display: inline-block;
-            }
-            .menu-toggle {
-                width: 24px;
-                height: 24px;
-                margin-right: 15px;
-                span {
-                    cursor: pointer;
-                    font-size: 24px;
-                    color: #767676;
-                }
             }
         }
     }
