--- a/components/jade/index.jade
+++ b/components/jade/index.jade
@@ -34,6 +34,11 @@ html
                     .newnote New Note
                     .sort Sort
                         span.fa.fa-caret-down
+                        ul
+                            li Title (ascending)
+                            li Title (descending)
+                            li Newest first
+                            li Oldest first
                 .body
                     // .note.selected
                     //     h3 Note Title ippet ksldjf lsk sdlfks 
