--- a/components/sass/_components.scss
+++ b/components/sass/_components.scss
@@ -141,7 +141,7 @@ ul {
                 height: 30px;
                 width: 100px;
                 float: right;
-                border-radius: 5px;
+                border-radius: 3px;
                 background-color: $special-button;
                 color: $white;
                 text-align: center;
@@ -161,8 +161,31 @@ ul {
                 float: left;
                 color: $white;
                 margin-top: 5px;
+                position: relative;
                 span {
-                    margin: auto 6px;
+                    margin: auto 5px;
+                }
+                ul {
+                    text-align: left;
+                    display: none;
+                    z-index: 20;
+                    position: absolute;
+                    height: 120px;
+                    width: 130px;
+                    background-color: $bg-default;
+                    top: 22px;
+                    font-size: 1.14rem;
+                    color: $notes-title;
+                    font-weight: bold;
+                    line-height: 2.2rem;
+                    border: 1px solid lighten($bg-default, 10%);
+                    padding: 8px 13px;
+                    box-shadow: 0 2px 17px 2px darken($bg-default, 30%);
+                }
+                &:hover {
+                    ul {
+                        display: block;
+                    }
                 }
             }
             input {
