removed black header

--- a/components/jade/index.jade
+++ b/components/jade/index.jade
@@ -1,4 +1,4 @@
-//-master
+//-angular
 //-codepen stuff
 //-<span class="fa fa-codepen fa-2x"></span>
 //-<span class="glyphicons glyphicons-glass"></span>
@@ -121,4 +121,6 @@ html
                     li: span.action.fa.fa-floppy-o
                     li: span.action.fa.fa-envelope-o
                     li: span.action.fa.fa-trash-o
+    script(src="js/angular.min.js") 
+    script(src="js/bundle.js") 
                     
