--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -466,6 +466,15 @@ ul {
   height: 65px;
 }
 
+header {
+  height: 30px;
+  color: white;
+  font-size: 12px;
+  line-height: 30px;
+  background-color: black;
+  width: 100%;
+}
+
 #panel {
   background-color: #333;
   width: 300px;
